--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div class="cell">
+        <h1>App solo para Celular</h1>
+        <h1>📱</h1>
+    </div>
   </body>
 </html>
